fix(preset-3): adjust product info margin for better alignment

--- a/assets/carousel.css
+++ b/assets/carousel.css
@@ -339,7 +339,7 @@ a.clevers-button.ajax_add_to_cart.add_to_cart_button:focus {
 }
 
 .preset-3-card .product-info {
-    margin: -30px 10px 0;
+    margin: -20px 10px 0;
     z-index: 50;
     position: relative;
     background: var(--clevers-secondary);
